--- a/css/js1.css
+++ b/css/js1.css
@@ -409,6 +409,7 @@ template {
   color: #EEB422;
   border: 1px solid #EEB422;
   border-radius: 4%;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=js1.css.map */
