--- a/css/js3.css
+++ b/css/js3.css
@@ -411,11 +411,28 @@ template {
     clear: both; }
 
 
+@media screen and (min-width: 426px){
+    .container{
+        position:relative;
+        width: 425px;
+        margin: 0 auto;
+    }
+    .header{
+        position: absolute!important;
+    }
+    html {
+        font-size: calc(385px/3.2)!important;
+        -webkit-text-size-adjust: none; }
+    input[type='range']{
+        width: 70%!important;
+        margin-top: 0.30rem!important;
+    }
+}
 html {
     font-size: calc(100vw/3.2);
     -webkit-text-size-adjust: none; }
-body{
-    background-color: #29bde0;
+.container{
+   background-color: #29bde0;
 }
 .header {
     position: fixed;
@@ -424,7 +441,7 @@ body{
     width: 100%;
     background-color: #29bde0;
     text-align: center;
-    border-bottom:1px solid #74d4eb;
+    border-bottom: 1px solid #74d4eb;
 }
 
 .header .btn-1 {
@@ -461,16 +478,21 @@ body{
     margin-right: 0.12rem !important;
     line-height: 0.2rem; }
 .header .btn-2 img {
-    width: 0.18rem;
-    height: 0.18rem;
+    width: 0.26rem;
+    height: 0.26rem;
     max-width: 100%;
     vertical-align: middle; }
 .main{
-  padding-top: 0.4rem;
+    padding-top: 0.4rem;
 }
+
+
+
+
 .main .identity{
     margin: 0.42rem 0.43rem 0.56rem;
     position: relative;
+    text-align: center;
 }
 .main .identity .person-num{
     position: absolute;
@@ -491,7 +513,6 @@ body{
     width: 2.32rem;
     height: 3.28rem;
     max-width: 100%;
-    /*display: none;*/
 }
 .main .identity .photo-result{
     width: 2.32rem;
@@ -510,17 +531,20 @@ body{
 }
 .footer {
     height: 0.6rem;
-
-    background-color:#29bde0
+    position: relative;
+    background-color:#29bde0;
 ; }
 .footer button {
-    float: left;
-    width: 2.6rem;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top:0.1rem ;
+    width: 2.9rem;
     height: 0.44rem;
-    margin:0 0.3rem ;
-    color: #ffffff;
     font-size: 22px;
+    color: #ffffff;
+    letter-spacing: 4px;
     border: none;
     background-color: #fab334; }
 
-/*# sourceMappingURL=js2-1.css.map */
+/*!*# sourceMappingURL=js2-1.css.map *!*/
