--- a/css/js2-1.css
+++ b/css/js2-1.css
@@ -410,11 +410,34 @@ template {
   height: 0;
   clear: both; }
 
+@media screen and(max-width: 425px){
+  .container{
+
+    position: relative;
+  }
+
+}
+@media screen and (min-width: 426px){
+  .container{
+    position:relative;
+    width: 425px;
+    margin: 0 auto;
+  }
+  .header{
+    position: absolute!important;
+  }
+  html {
+    font-size: calc(385px/3.2)!important;
+    -webkit-text-size-adjust: none; }
+  input[type='range']{
+    width: 70%!important;
+    margin-top: 0.30rem!important;
+  }
+}
 
 html {
-    font-size: calc(100vw/3.2);
-    -webkit-text-size-adjust: none; }
-
+  font-size: calc(100vw/3.2);
+}
 .header {
     position: fixed;
     top: 0;
@@ -478,7 +501,7 @@ html {
       width: 21%;
       height: 100%;
       text-align: center;
-      font-size: 20px;
+      font-size: 24px;
       line-height: 0.62rem;
       vertical-align: middle;
       border-right: 1px solid #d8d8d8;
@@ -510,8 +533,17 @@ html {
     .main .player-install .install {
       font-size: 20px;
       height: 0.29rem;
+      line-height: 0.29rem;
+      vertical-align:middle;
+      color: #29bde0;
       text-align: center;
-      cursor: pointer; }
+      cursor: pointer;
+    }
+.main .player-install .install img{
+  margin-left: 0.05rem;
+  width: 0.10rem;
+  height: 0.10rem;
+}
   .main .man-ghost {
     height: 1rem;
     margin-left: 0.09rem;
@@ -523,14 +555,20 @@ html {
       margin: 0.05rem 0.14rem 0;
       line-height: 0.38rem;
       border: none;
-      border-bottom: 1px solid #d8d8d8; }
+      border-bottom: 1px solid #d8d8d8;
+    }
+
+input::-webkit-input-placeholder {
+     /* placeholder颜色  */
+   color: #d7d7d7;
+    }
     .main .man-ghost .man {
       font-size: 16px;
       float: left; }
     .main .man-ghost .ghost {
       float: left;
       font-size: 16px; }
-  .main .man-mun {
+    .main .man-mun {
     height: 0.94rem;
     margin-left: 0.09rem;
     margin-right: 0.09rem;
@@ -541,7 +579,7 @@ html {
       width: 100%;
       height: 100%; }
     .main .man-mun label {
-      font-size: 16px;
+      font-size: 18px;
       float: left;
       line-height: 0.37rem;
       vertical-align: middle;
@@ -551,8 +589,10 @@ html {
         margin: 0 0.1rem;
         text-align: center;
         color: #fab334;
-        background: #d8d8d8;
-        border: none; }
+        background: #f4f5f5;
+        border: none;
+        font-size: 20px;
+      }
     .main .man-mun .btn-control {
       float: left;
       width: 100%;
@@ -570,43 +610,58 @@ html {
       .main .man-mun .btn-control .subtraction {
         float: left;
         margin-top: 0.2rem;
-        margin-left: 0.2rem; }
+        margin-left: 0.2rem;
+        background-color: #ffffff;
+        border: 1px solid #d8d8d8;
+      }
       .main .man-mun .btn-control .add {
         float: right;
         margin-top: 0.2rem;
-        margin-right: 0.2rem; }
+        margin-right: 0.2rem;
+        background-color: #ffffff;
+        border: 1px solid #d8d8d8;
+      }
       .main .man-mun .btn-control input[type='range'] {
         float: left;
         width: 65%;
         margin-top: 0.28rem;
         margin-left: 0.1rem;
         -webkit-appearance: none;
-        outline: none; }
-      .main .man-mun .btn-control input[type=range]::-webkit-slider-thumb {
-        -webkit-appearance: none; }
+        outline: none;
+      }
+
       .main .man-mun .btn-control input[type=range]::-webkit-slider-runnable-track {
         height: 0.02rem;
         background-color: #fab334; }
       .main .man-mun .btn-control input[type=range]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
         cursor: pointer;
         width: 0.28rem;
         height: 0.17rem;
         margin-top: -0.085rem;
-        background: #ffffff;
+        background-image: url("../photo/js2-3.png");
+        background-size: cover;
         border: 1px solid #fab334;
-        border-radius: 3px; }
+        border-radius: 3px;
+      }
 
 .footer {
   height: 0.6rem;
-  background-color: #efefef; }
+  background-color: #efefef;
+  position: relative;
+}
   .footer button {
-    float: left;
-    margin-top: 0.1rem;
-    margin-left: 0.09rem;
-    margin-right: 0.09rem;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top:0.1rem ;
     width: 2.9rem;
     height: 0.44rem;
     font-size: 22px;
+    color: #ffffff;
+    letter-spacing: 4px;
     border: none;
     background-color: #fab334; }
 
