--- a/css/task13-2.css
+++ b/css/task13-2.css
@@ -1,7 +1,37 @@
+@media screen and(max-width: 425px){
+  .container{
+    position: relative;
+  }
+
+}
+@media screen and (min-width: 426px){
+  .container{
+    position:relative;
+    width: 425px;
+    margin: 0 auto;
+    /*border: 1px solid #d8d8d8;*/
+  }
+  .header{
+    position: absolute!important;
+  }
+  html {
+    font-size: calc(385px/3.2)!important;
+    -webkit-text-size-adjust: none; }
+  input[type='range']{
+    width: 70%!important;
+    margin-top: 0.30rem!important;
+  }
+}
+
 body {
   margin: 0;
-  padding: 0; }
-
+  padding: 0;
+  background-color: #ffffff!important;
+}
+.container{
+  background-color: #f5f5f5;
+  position: relative;
+}
 html {
   font-size: calc(100vw/3.2);
   -webkit-text-size-adjust: none;
@@ -40,7 +70,9 @@ body {
       vertical-align: middle; }
 
 .main {
-  padding-top: 0.4rem; }
+  padding-top: 0.4rem;
+  padding-bottom: 0.2rem;
+}
   .main .top-content {
     position: relative;
     height: 0.58rem;
@@ -96,11 +128,9 @@ body {
       font-size: 12.5px;
       color: #787878; }
     .main .list-group .button-3 {
-      position: fixed;
-      top:3rem;
-      right:0.21rem;
-      width: 0.22rem;
-      height: 0.6rem;
+      float: right;
+      margin-top: -0.5rem;
+      margin-right:0.05rem ;
       background-color: #ffffff;
     }
       .main .list-group .button-3 .glyphicon {
