--- a/css/js4-1.css
+++ b/css/js4-1.css
@@ -7,12 +7,12 @@
  *    IE on Windows Phone and in iOS.
  */
 html {
-    line-height: 1.15;
-    /* 1 */
-    -ms-text-size-adjust: 100%;
-    /* 2 */
-    -webkit-text-size-adjust: 100%;
-    /* 2 */ }
+  line-height: 1.15;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */ }
 
 /* Sections
    ========================================================================== */
@@ -20,7 +20,7 @@ html {
  * Remove the margin in all browsers (opinionated).
  */
 body {
-    margin: 0; }
+  margin: 0; }
 
 /**
  * Add the correct display in IE 9-.
@@ -31,15 +31,15 @@ footer,
 header,
 nav,
 section {
-    display: block; }
+  display: block; }
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 h1 {
-    font-size: 2em;
-    margin: 0.67em 0; }
+  font-size: 2em;
+  margin: 0.67em 0; }
 
 /* Grouping content
    ========================================================================== */
@@ -50,36 +50,36 @@ h1 {
 figcaption,
 figure,
 main {
-    /* 1 */
-    display: block; }
+  /* 1 */
+  display: block; }
 
 /**
  * Add the correct margin in IE 8.
  */
 figure {
-    margin: 1em 40px; }
+  margin: 1em 40px; }
 
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-    box-sizing: content-box;
-    /* 1 */
-    height: 0;
-    /* 1 */
-    overflow: visible;
-    /* 2 */ }
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */ }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-    font-family: monospace, monospace;
-    /* 1 */
-    font-size: 1em;
-    /* 2 */ }
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
 
 /* Text-level semantics
    ========================================================================== */
@@ -88,36 +88,36 @@ pre {
  * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
  */
 a {
-    background-color: transparent;
-    /* 1 */
-    -webkit-text-decoration-skip: objects;
-    /* 2 */ }
+  background-color: transparent;
+  /* 1 */
+  -webkit-text-decoration-skip: objects;
+  /* 2 */ }
 
 /**
  * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
-    border-bottom: none;
-    /* 1 */
-    text-decoration: underline;
-    /* 2 */
-    text-decoration: underline dotted;
-    /* 2 */ }
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */ }
 
 /**
  * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
  */
 b,
 strong {
-    font-weight: inherit; }
+  font-weight: inherit; }
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 b,
 strong {
-    font-weight: bolder; }
+  font-weight: bolder; }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -126,29 +126,29 @@ strong {
 code,
 kbd,
 samp {
-    font-family: monospace, monospace;
-    /* 1 */
-    font-size: 1em;
-    /* 2 */ }
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
 
 /**
  * Add the correct font style in Android 4.3-.
  */
 dfn {
-    font-style: italic; }
+  font-style: italic; }
 
 /**
  * Add the correct background and color in IE 9-.
  */
 mark {
-    background-color: #ff0;
-    color: #000; }
+  background-color: #ff0;
+  color: #000; }
 
 /**
  * Add the correct font size in all browsers.
  */
 small {
-    font-size: 80%; }
+  font-size: 80%; }
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -156,16 +156,16 @@ small {
  */
 sub,
 sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline; }
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
 
 sub {
-    bottom: -0.25em; }
+  bottom: -0.25em; }
 
 sup {
-    top: -0.5em; }
+  top: -0.5em; }
 
 /* Embedded content
    ========================================================================== */
@@ -174,26 +174,26 @@ sup {
  */
 audio,
 video {
-    display: inline-block; }
+  display: inline-block; }
 
 /**
  * Add the correct display in iOS 4-7.
  */
 audio:not([controls]) {
-    display: none;
-    height: 0; }
+  display: none;
+  height: 0; }
 
 /**
  * Remove the border on images inside links in IE 10-.
  */
 img {
-    border-style: none; }
+  border-style: none; }
 
 /**
  * Hide the overflow in IE.
  */
 svg:not(:root) {
-    overflow: hidden; }
+  overflow: hidden; }
 
 /* Forms
    ========================================================================== */
@@ -206,14 +206,14 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: sans-serif;
-    /* 1 */
-    font-size: 100%;
-    /* 1 */
-    line-height: 1.15;
-    /* 1 */
-    margin: 0;
-    /* 2 */ }
+  font-family: sans-serif;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */ }
 
 /**
  * Show the overflow in IE.
@@ -221,8 +221,8 @@ textarea {
  */
 button,
 input {
-    /* 1 */
-    overflow: visible; }
+  /* 1 */
+  overflow: visible; }
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -230,8 +230,8 @@ input {
  */
 button,
 select {
-    /* 1 */
-    text-transform: none; }
+  /* 1 */
+  text-transform: none; }
 
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
@@ -242,8 +242,8 @@ button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
-    -webkit-appearance: button;
-    /* 2 */ }
+  -webkit-appearance: button;
+  /* 2 */ }
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -252,8 +252,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0; }
+  border-style: none;
+  padding: 0; }
 
 /**
  * Restore the focus styles unset by the previous rule.
@@ -262,13 +262,13 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText; }
+  outline: 1px dotted ButtonText; }
 
 /**
  * Correct the padding in Firefox.
  */
 fieldset {
-    padding: 0.35em 0.75em 0.625em; }
+  padding: 0.35em 0.75em 0.625em; }
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -277,34 +277,34 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-    box-sizing: border-box;
-    /* 1 */
-    color: inherit;
-    /* 2 */
-    display: table;
-    /* 1 */
-    max-width: 100%;
-    /* 1 */
-    padding: 0;
-    /* 3 */
-    white-space: normal;
-    /* 1 */ }
+  box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */ }
 
 /**
  * 1. Add the correct display in IE 9-.
  * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
-    display: inline-block;
-    /* 1 */
-    vertical-align: baseline;
-    /* 2 */ }
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */ }
 
 /**
  * Remove the default vertical scrollbar in IE.
  */
 textarea {
-    overflow: auto; }
+  overflow: auto; }
 
 /**
  * 1. Add the correct box sizing in IE 10-.
@@ -312,44 +312,44 @@ textarea {
  */
 [type="checkbox"],
 [type="radio"] {
-    box-sizing: border-box;
-    /* 1 */
-    padding: 0;
-    /* 2 */ }
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-    height: auto; }
+  height: auto; }
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
 [type="search"] {
-    -webkit-appearance: textfield;
-    /* 1 */
-    outline-offset: -2px;
-    /* 2 */ }
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */ }
 
 /**
  * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none; }
+  -webkit-appearance: none; }
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    /* 1 */
-    font: inherit;
-    /* 2 */ }
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */ }
 
 /* Interactive
    ========================================================================== */
@@ -359,13 +359,13 @@ textarea {
  */
 details,
 menu {
-    display: block; }
+  display: block; }
 
 /*
  * Add the correct display in all browsers.
  */
 summary {
-    display: list-item; }
+  display: list-item; }
 
 /* Scripting
    ========================================================================== */
@@ -373,13 +373,13 @@ summary {
  * Add the correct display in IE 9-.
  */
 canvas {
-    display: inline-block; }
+  display: inline-block; }
 
 /**
  * Add the correct display in IE.
  */
 template {
-    display: none; }
+  display: none; }
 
 /* Hidden
    ========================================================================== */
@@ -387,22 +387,22 @@ template {
  * Add the correct display in IE 10-.
  */
 [hidden] {
-    display: none; }
+  display: none; }
 
 .pull-right {
-    float: right; }
+  float: right; }
 
 .pull-left {
-    float: left; }
+  float: left; }
 
 .algin-left {
-    text-align: left; }
+  text-align: left; }
 
 .align-center {
-    text-align: center; }
+  text-align: center; }
 
 .align-right {
-    text-align: right; }
+  text-align: right; }
 
 .main .player-install:after {
     content: "\200B";
@@ -481,96 +481,102 @@ html {
 .main{
     padding-top: 0.4rem;
 }
-
-
 .main {
-  height: 4.5rem; }
-
-.main-header {
-  height: 0.41rem;
-  font-size: 0.13rem;
-  background-color: #b9e9f5;
-  position: relative; }
-
-.main-header-text {
-  margin-left: 0.23rem;
-  line-height: 0.41rem;
-  vertical-align: middle; }
-
-.main-header-triangle {
-  position: absolute;
-  z-index: 2;
-  width: 0;
-  height: 0;
-  left: 0.4rem;
-  top: 0.41rem;
-  border-top: 8px solid #b9e9f5;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent; }
-
-.main-content {
-  height: 0.45rem;
-  line-height: 0.4rem;
-  vertical-align: middle;
-  color: #ffffff;
-  font-size: 0.13rem;
-  padding-left: 0.35rem; }
-
-.person-info {
-  float: left;
-  width: 33%;
-  position: relative;
-  box-sizing: border-box;
-  padding-left: 7%;
-  padding-bottom: 0.37rem; }
-  .person-info .person-name {
+  height: 4.5rem;
+  background-color: #f0f0f0; }
+  .main .day-container {
+    margin-top: 0.21rem;
+    margin-left: 0.04rem;
+    margin-right: 0.04rem;
+    border: 1px solid #888888;
+    background-color: #ffffff; }
+  .main .first-day {
+    position: relative;
+    height: 0.42rem;
+    line-height: 0.42rem;
+    text-align: center;
     font-size: 0.15rem;
-    color: #565656;
-    text-align: center;
-    width: 0.63rem;
-    height: 0.5rem;
-    line-height: 0.5rem;
-    vertical-align: middle;
-    background-color: #ffcc66;
-    border-top: 0.025rem solid #ffffff;
-    border-left: 0.025rem solid #ffffff;
-    border-right: 0.025rem solid #ffffff; }
-  .person-info .person-num {
-    float: left;
-    width: 0.63rem;
-    text-align: center;
-    font-size: 0.11rem;
+    color: #24a7c6;
+    border-bottom: 1px solid #888888; }
+    .main .first-day img {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 0.1rem;
+      width: 0.15rem;
+      height: 0.09rem;
+      max-width: 100%; }
+  .main .course ul {
+    border-left: 2px solid #c9c9c9;
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0.18rem; }
+  .main .course li {
+    position: relative;
+    font-size: 0.15rem;
+    width: 2.35rem;
+    height: 0.38rem;
+    margin-bottom: 0.15rem;
     color: #ffffff;
-    background-color: #83b09a;
-    border-bottom: 0.025rem solid #ffffff;
-    border-left: 0.025rem solid #ffffff;
-    border-right: 0.025rem solid #ffffff; }
-  .person-info .person-kill {
+    text-align: center;
+    background-color: #24a7c6;
+    line-height: 0.38rem;
+    vertical-align: middle; }
+  .main .course i {
     position: absolute;
-    top: 0.73rem;
-    left: 50%;
-    transform: translate(-50%);
-    display: none; }
+    left: 0;
+    top: 50%;
+    transform: translate(-100%, -50%);
+    width: 0;
+    height: 0;
+    border-right: 0.08rem solid #24a7c6;
+    border-top: 0.06rem solid transparent;
+    border-bottom: 0.06rem solid transparent; }
+  .main .course .killer span, .main .course .last-words span {
+    position: absolute;
+    left: -0.34rem;
+    top: 0.05rem;
+    z-index: 1;
+    transform: translateX(-50%);
+    width: 0.29rem;
+    height: 0.29rem;
+    background-color: #ffffff;
+    border: 1px solid #888888;
+    border-radius: 50%; }
+  .main .course .killer img, .main .course .last-words img {
+    padding: 0.05rem; }
+  .main .course .killer {
+    margin-top: 0.1rem; }
+    .main .course .killer img {
+      width: 0.15rem;
+      height: 0.18rem; }
+  .main .course .last-words img {
+    margin-top: 0.01rem;
+    width: 0.18rem;
+    height: 0.18rem; }
 
 .footer {
   height: 0.6rem;
   position: relative;
-  background-color: #29bde0; }
+  background-color: #99dff0;
+  opacity: 1; }
+  .footer #close-game {
+    left: 5%; }
+  .footer #justicer-log {
+    right: 5%; }
 
 .footer button {
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 2.9rem;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 1.43rem;
   height: 0.44rem;
   font-size: 22px;
   color: #ffffff;
   letter-spacing: 4px;
   border: none;
+  border-radius: 0.05rem;
   background-color: #fab334; }
 
-/*# sourceMappingURL=js4.css.map */
-
-
-
-/*!*# sourceMappingURL=js2-1.css.map *!*/
+/*# sourceMappingURL=js4-1.css.map */
