--- a/css/js4-result.css
+++ b/css/js4-result.css
@@ -390,35 +390,16 @@ template {
     display: none; }
 
 
-.pull-right {
-    float: right; }
+@media screen and(max-width: 425px){
+    .container{
 
-.pull-left {
-    float: left; }
-
-.algin-left {
-    text-align: left; }
-
-.align-center {
-    text-align: center; }
-
-.align-right {
-    text-align: right; }
-
-.clearfix{
-
+        position: relative;
+    }
+    .footer-container{
+        width: 100%;
+    }
 }
-.clearfix:after{
-    content: "\200B";
-    display: block;
-    height: 0;
-    clear: both;
-}
-
 @media screen and (min-width: 426px){
-    html {
-        font-size: calc(385px/3.2)!important;
-        -webkit-text-size-adjust: none; }
     .container{
         position:relative;
         width: 425px;
@@ -427,15 +408,16 @@ template {
     .header{
         position: absolute!important;
     }
+    html {
+        font-size: calc(385px/3.2)!important;
+        -webkit-text-size-adjust: none; }
     .footer{
         width: 425px!important;
     }
 }
+
 html {
     font-size: calc(100vw/3.2);
-    -webkit-text-size-adjust: none; }
-.container{
-    background-color: #29bde0;
 }
 .header {
     position: fixed;
@@ -444,150 +426,141 @@ html {
     width: 100%;
     background-color: #29bde0;
     text-align: center;
+    z-index: 1;
     border-bottom: 1px solid #74d4eb;
 }
 
 .header .btn-1 {
     float: left;
-    background-color: #29bde0; }
-
-.header .btn-1, .header .btn-2 {
+    margin: 0;
+    padding: 0;
+    height: 0.4rem;
+    outline: none;
+    border: none;
+    background-color: #29bde0;
+    margin-left: 12px !important;
+    line-height: 0.2rem;
+}
+.header .btn-1 img {
+    width: 0.26rem;
+    height: 0.21rem;
+    max-width: 100%;
+    vertical-align: middle;
+    float: right;
+}
+.header .btn-2 {
+    float: right;
+    height: 0.4rem;
     margin: 0;
     padding: 0;
     outline: none;
-    border: none; }
-
-.header .btn-2 {
-    float: right;
-    background-color: #29bde0; }
-.header {
-    z-index: 1; }
-.header .btn-1 {
-    margin-left: 12px !important;
-    line-height: 0.2rem; }
-.header .btn-1 img {
-    width: 0.12rem;
-    height: 0.2rem;
-    max-width: 100%;
-    vertical-align: middle; }
-.header span {
-    font-size: 20px;
-    color: #fff;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
-.header .btn-2 {
+    border: none;
+    background-color: #29bde0;
     margin-right: 0.12rem !important;
-    line-height: 0.2rem; }
+
+}
 .header .btn-2 img {
     width: 0.26rem;
     height: 0.26rem;
     max-width: 100%;
-    vertical-align: middle; }
-.main{
-
-    padding-top: 0.4rem;
-    padding-bottom: 0.6rem;
+    float: right;
 }
-
-
-
-.main-header {
-  height: 0.41rem;
-  font-size: 0.13rem;
-  background-color: #b9e9f5;
-  position: relative; }
-
-.main-header-text {
-  margin-left: 0.23rem;
-  line-height: 0.41rem;
-  vertical-align: middle; }
-
-.main-header-triangle {
-  position: absolute;
-  z-index: 2;
-  width: 0;
-  height: 0;
-  left: 0.4rem;
-  top: 0.41rem;
-  border-top: 8px solid #b9e9f5;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent; }
-
-.main-content {
-  height: 0.45rem;
-  line-height: 0.4rem;
-  vertical-align: middle;
-  color: #ffffff;
-  font-size: 0.13rem;
-  padding-left: 0.35rem; }
-
-.person-info {
-  float: left;
-  width: 33%;
-  position: relative;
-  box-sizing: border-box;
-  padding-left: 7%;
-  padding-bottom: 0.37rem;
-  background-color: #29bde0;;
-}
-.person-info:hover .person-kill{
-    display: none;
-}
-  .person-info .person-name {
-    font-size: 0.15rem;
-    color: #565656;
-    text-align: center;
-    width: 0.63rem;
-    height: 0.5rem;
-    line-height: 0.5rem;
-    vertical-align: middle;
-    background-color: #ffcc66;
-    border-top: 0.025rem solid #ffffff;
-    border-left: 0.025rem solid #ffffff;
-    border-right: 0.025rem solid #ffffff; }
-  .person-info .person-num {
-    float: left;
-    width: 0.63rem;
-    text-align: center;
-    font-size: 0.11rem;
-    color: #ffffff;
-    background-color: #83b09a;
-    border-bottom: 0.025rem solid #ffffff;
-    border-left: 0.025rem solid #ffffff;
-    border-right: 0.025rem solid #ffffff; }
-  .person-info .person-kill {
+.header span {
+    font-size: 20px;
+    color: #fff;
     position: absolute;
-    top: 0.73rem;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%);
-    display: none; }
+    transform: translate(-50%, -50%);
+}
+.main{
+    padding-top: 0.4rem;
+    margin-bottom: 0.4rem;
+}
+.main {
+
+    background-color: #29bde0; }
+.main .main-header {
+    height: 1.23rem;
+    text-align: center; }
+.main .main-header img {
+    margin-top: 0.1rem;
+    width: 1.76rem;
+    height: 1.03rem;
+    max-width: 100%; }
+.main .main-text-1 {
+    height: 0.8rem;
+    padding: 0 12%;
+    font-size: 0.17rem;
+    color: #ffc865; }
+.main .main-text-2 {
+    height: 0.95rem;
+    padding-left: 12%;
+    font-size: 0.13rem;
+    color: #fff; }
+.main .main-text-2 p {
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.main .main-text-2 p span{
+    letter-spacing: 3px;
+}
+.main .main-text-2 .person-num{
+    margin-left: 0.1rem;
+}
+.main .main-text-3{
+    height: 0.95rem;
+    padding-left: 12%;
+    background-color: #fff; }
+.main .main-text-3 .text-container {
+    height: 0.34rem;
+    line-height: 0.34rem; }
+.main .main-text-3 .main-text-first-header {
+    float: left;
+    font-size: 0.15rem;
+    color: #515151; }
+.main .main-text-3 .main-text-second-header {
+    float: right;
+    margin-right: 18%;
+    font-size: 0.1rem;
+    color: #d5d5d5;
+    -webkit-text-size-adjust: none; }
+.main .main-text-3 p{
+    margin-top: 0.04rem;
+    margin-bottom: 0;
+    font-size: 0.13rem;
+    color: #d5d5d5; }
+
 
 .footer {
-  height: 0.6rem;
-    width: 100%;
-  position: fixed;
+    background-color: rgba(153,223,240,0.6);
+    height: 0.6rem;
+    position: fixed;
     bottom: 0;
-  background-color: #29bde0;
-    border-top:1px solid #b9e9f5 ;
+    width: 100%;
+    }
+.footer #gameAgain {
+    left: 3%;
+    background-color: #f66f6f;
+}
+.footer #upload {
+    right: 3%;
+    background-color: #fab334;
 }
 
 .footer button {
-  position: absolute;
-  left: 50%;
-  top:50%;
-  transform: translate(-50%,-50%);
-  width: 2.9rem;
-  height: 0.44rem;
-  font-size: 22px;
-  color: #ffffff;
-  letter-spacing: 4px;
-  border: none;
-  background-color: #fab334; }
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1.43rem;
+    height: 0.44rem;
+    font-size:0.18rem;
+    color: #ffffff;
+    letter-spacing: 4px;
+    border: none;
+    border-radius: 0.05rem;
 
-/*# sourceMappingURL=js4.css.map */
+}
 
-
-
-/*!*# sourceMappingURL=js2-1.css.map *!*/
+/*# sourceMappingURL=task13-3.css.map */
